--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
       </div>
     </header>
 
+<!-- Video Demonstration Section - Versão Corrigida -->
+<section class="video-section">
+  <div class="container">
+    <div class="video-container">
+      <div class="video-wrapper">
+        <!-- URL Corrigida com o formato de embed do YouTube -->
+        <iframe src="https://www.youtube.com/embed/NOWMP4gmyGc"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+                loading="lazy"></iframe>
+      </div>
+    </div>
+    
+    <div class="video-cta">
+    </div>
+  </div>
+</section>
+
+
     <section class="competing-offers">
       <div class="connecting-arrow">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none">
@@ -109,6 +129,8 @@
         </a>
       </div>
     </section>
+
+
 
     <section>
       <div class="container">
@@ -261,8 +283,8 @@
           </div>
 
           <!-- sax tenor 2 (50 arranjos) -->
-          <div class="instrument-card" data-instrument="sax tenor">
-              <div class="instrument-image">
+<div class="instrument-card" data-instrument="sax tenor" id="sax-tenor-2">
+    <div class="instrument-image">
                   <img src="imagens/sax tenor.png" alt="sax tenor">
               </div>
               <h3>SAX TENOR</h3>
@@ -522,6 +544,7 @@
 
 
 
+
 <!-- Video Demonstration Section - Versão Corrigida -->
 <section class="video-section">
   <div class="container">
@@ -545,6 +568,7 @@
 </div>
   </div>
 </section>
+
 
 
 
@@ -667,8 +691,13 @@
                 </ul>
             </div>
         </div>
+            <div class="video-cta">
+    <a href="#sax-alto" class="cta-button">Comprar Agora</a>
+</div>
     </div>
 </section>
+
+
 
 <!-- Testimonials -->
 <section class="testimonials">
@@ -709,29 +738,6 @@
     </div>
 </section>
 
-<!-- Bonus Section -->
-<section class="featured-combo">
-    <div class="container">
-        <div class="featured-description">🎁 BÔNUS INCLUSO</div>
-        <div class="featured-instrument">
-            <div class="featured-info">
-                <h3>Videoaulas: Técnicas Avançadas para Metais</h3>
-                <ul class="combo-features">
-                    <li><i>✓</i> Respiração e embocadura para metais</li>
-                    <li><i>✓</i> Técnicas de articulação e staccato</li>
-                    <li><i>✓</i> Como fazer solos criativos nos louvores</li>
-                    <li><i>✓</i> Exercícios práticos para melhorar sua técnica</li>
-                    <li><i>✓</i> Bônus incluso nos pacotes completos</li>
-                </ul>
-                <div class="featured-price">
-                    <div class="price-comparison">
-                        <span class="final-price">INCLUSO NOS PACOTES DE 30 E 50 ARRANJOS</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
     <!-- CTA Section -->
     <section class="cta-section">
