--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="video-container">
       <div class="video-wrapper">
         <!-- URL Corrigida com o formato de embed do YouTube -->
-        <iframe src="https://www.youtube.com/embed/NOWMP4gmyGc"
+        <iframe src="https://www.youtube.com/embed/xIjqlsRks60"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
@@ -56,6 +56,7 @@
     </div>
   </div>
 </section>
+
 
 
     <section class="competing-offers">
