--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   <span class="old-price">R$3.500</span>
                   <span class="new-price">R$314,95</span>
               </div>
-              <a href="https://pay.kiwify.com.br/neFo5u7" target="_blank">
+              <a href="https://pay.kiwify.com.br/kxcbljY" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
               </a>
           </div>
